--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "endroid/qrcode": "^2.4",
+        "gregwar/captcha": "v1.1.3",
+        "flc/alidayu": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
